fix icon for retina displays
All of the other icons use the @2x size on retina screens.
We have a general css rule that scales icons on retina
screens by 0.5, so using the regular-sized icon caused
it to be displayed too small.

--- a/web/customize_viewer.css
+++ b/web/customize_viewer.css
@@ -15,6 +15,12 @@
   transform-origin: 8px 8px;
 }
 
+@media screen and (min-resolution: 2dppx) {
+  .rotateCw::before {
+    content: url(images/secondaryToolbarButton-rotateCw@2x.png);
+  }
+}
+
 /**
  * Remove spacing between words when displaying
  * <span>page</span><span>1</span></span>of 7</span>
